project-1/css/stylesheet.css
/* trying to make space 🚀 background color */
body{
    margin:0;
    background-color: rgb(2, 0, 17);
    color: white;
    font-family: Arial, Helvetica, sans-serif;
}

/* background stars  */
body::before{
    content: "";
    position: fixed;
    width: 100%;
    height: 100%;
    background-image: radial-gradient(white 1px, transparent 1px);
    background-size: 50px 50px;
    opacity: 0.3;
}

/* header */
header{
    text-align:center;
    padding: 40px 20px;
    position: relative;
    text-align: center;
}

/* Animation inspired by:
   MDN Web Docs - CSS Animations
   https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_animations
*/
/* Animation inspired by MDN Web Docs */

@keyframes floatUFO {
  0% { transform: translateY(0); }
  50% { transform: translateY(-10px); }
  100% { transform: translateY(0); }
}

/* ufo */
header::after {
  content: "🛸";
  position: absolute;
  top: 20px;
  right: 30px;
  font-size: 40px;
  animation: floatUFO 3s infinite ease-in-out;
}


/* neon light  */
header h1{
    font-size: 50px;
    color: hotpink;
    text-shadow: 
    /* 0 0 5px hotpink, */
    /* 0 0 10px hotpink, */
    0 0 20px hotpink;
}

/* Subtitle */
header h2 {
  color: cyan;
  text-shadow: 0 0 8px cyan;
}

/* nav bar */
nav{
    text-align: center;
    padding: 15px 10px;
}

/* removing bullet points */
nav ul{
    list-style: none;
    padding: 0;
    margin: 0;
}

/* Put nav items in one row */
nav li{
    display: inline-block;
    margin: 8px;
}

/* Nav links */
nav a{
    color: cyan;
    text-decoration: none;
    font-size: 20px;
    text-shadow: 0 0 5px cyan;
    transition: 0.3s;
}

nav a:hover {
    color: hotpink;
    text-shadow: 0 0 8px hotpink;
}

/* Alien icon before each link */
nav a::before{
    content: "👾";
}

